--- a/prototty/Cargo.toml
+++ b/prototty/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
 edition = "2018"
 
+[features]
+wasm-bindgen = ["rand/wasm-bindgen"]
+
 [dependencies]
-prototty = "0.23"
+serde = { version = "1.0", features = ["serde_derive"] }
 cherenkov = { path = "../cherenkov" }
+prototty = { version = "0.23", features = ["serialize", "storage"] }
+rand = { version = "0.6" }
+rand_isaac = { version = "0.1", features = ["serde1"] }
