--- a/unix/Cargo.toml
+++ b/unix/Cargo.toml
@@ -5,6 +5,5 @@ authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-prototty_unix = "0.23"
+prototty_unix = { version = "0.23", features = ["storage"] }
 cherenkov_prototty = { path = "../prototty" }
-
