--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
-name = "wasm"
+name = "cherenkov_wasm"
 version = "0.1.0"
 authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
 edition = "2018"
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
+prototty_wasm = { version = "0.23", features = ["storage"] }
+cherenkov_prototty = { path = "../prototty", features = ["wasm-bindgen"] }
+wasm-bindgen = "0.2"
