--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,13 @@ matrix:
   include:
   - os: linux
     rust: stable
+    sudo: required
     before_script:
       - npm install -g npx
       - rustup target add wasm32-unknown-unknown
       - cargo install -f wasm-bindgen-cli
+      - sudo apt-get update
+      - sudo apt-get -y install python3 python3-pip
   - os: osx
     rust: stable
 script:
