--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ matrix:
     - nvm install 10
     - npm install -g npx
     - rustup target add wasm32-unknown-unknown
-    - cargo install -f wasm-bindgen-cli
+    - cargo list | grep install-update || cargo install -f cargo-update
+    - cargo install-update -i wasm-bindgen-cli
     - sudo apt-get update
     - sudo apt-get -y install python3 python3-pip
   - os: osx
