Enable lto in release builds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,4 @@
 [workspace]
-
 members = [
     "cherenkov",
     "prototty",
@@ -7,3 +6,6 @@ members = [
     "unix",
     "wasm",
 ]
+
+[profile.release]
+lto = true
