--- a/cherenkov/Cargo.toml
+++ b/cherenkov/Cargo.toml
@@ -5,3 +5,5 @@ authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+rand = "0.6"
+serde = { version = "1.0", features = ["serde_derive"] }
