--- a/cherenkov/Cargo.toml
+++ b/cherenkov/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 [dependencies]
 rand = "0.6"
 serde = { version = "1.0", features = ["serde_derive"] }
+grid_2d = { version = "0.12", features = ["serialize"] }
+coord_2d = { version = "0.2", features = ["serialize"] }
+direction = { version = "0.17", features = ["serialize"] }
