--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
     - sudo apt-get -y install python3 python3-pip
     - pip3 install --quiet --user sh toml
     script:
-    - scripts/build.sh cherenkov Cherenkov
+    - scripts/build-native.sh cherenkov Cherenkov
     <<: *DEPLOY_BINARIES
 
   - os: osx
@@ -37,7 +37,7 @@ matrix:
     - which python3 || brew install python3 || brew upgrade python
     - pip3 install --quiet --user sh toml
     script:
-    - scripts/build.sh cherenkov Cherenkov
+    - scripts/build-native.sh cherenkov Cherenkov
     <<: *DEPLOY_BINARIES
 
   - os: linux
@@ -53,7 +53,7 @@ matrix:
     - sudo apt-get -y install python3 python3-pip
     - pip3 install --quiet --user sh toml
     script:
-    - scripts/build.sh cherenkov Cherenkov
+    - scripts/build-wasm.sh cherenkov
     deploy:
       - provider: s3
         skip_cleanup: true
