--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,8 @@ matrix:
     - nvm install 10
     - npm install -g npx
     - rustup target add wasm32-unknown-unknown
-    - cargo install wasm-bindgen-cli
+    - cargo update -p wasm-bindgen
+    - cargo install -f wasm-bindgen-cli
     - sudo apt-get update
     - sudo apt-get -y install python3 python3-pip
     - pip3 install --quiet --user sh toml
