--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: rust
-cache: cargo
 
 DEPLOY_BINARIES: &DEPLOY_BINARIES
   deploy:
@@ -48,7 +47,7 @@ matrix:
     - nvm install 10
     - npm install -g npx
     - rustup target add wasm32-unknown-unknown
-    - cargo update -p wasm-bindgen
+    - cargo update
     - cargo install -f wasm-bindgen-cli
     - sudo apt-get update
     - sudo apt-get -y install python3 python3-pip
