--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: rust
+cache: cargo
 
 DEPLOY_BINARIES: &DEPLOY_BINARIES
   deploy:
@@ -47,8 +48,7 @@ matrix:
     - nvm install 10
     - npm install -g npx
     - rustup target add wasm32-unknown-unknown
-    - cargo update
-    - cargo install -f wasm-bindgen-cli
+    - cargo install wasm-bindgen-cli --version 0.2.37 # this has to match the version in Cargo.lock
     - sudo apt-get update
     - sudo apt-get -y install python3 python3-pip
     - pip3 install --quiet --user sh toml
