--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "cherenkov_glutin"
+name = "cherenkov_native"
 version = "0.1.0"
 authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-prototty_glutin = { version = "0.23", features = ["storage"] }
+simon = "0.2"
+whoami = "0.4"
 cherenkov_prototty = { path = "../prototty" }
-cherenkov_native = { path = "../native" }
