--- a/cherenkov/Cargo.toml
+++ b/cherenkov/Cargo.toml
@@ -10,4 +10,5 @@ serde = { version = "1.0", features = ["serde_derive"] }
 grid_2d = { version = "0.12", features = ["serialize"] }
 coord_2d = { version = "0.2", features = ["serialize"] }
 direction = { version = "0.17", features = ["serialize"] }
-shadowcast = "0.5"
+shadowcast = { version = "0.5", features = ["serialize"] }
+rgb24 = { version = "0.1", features = ["serialize"] }
