--- a/gws/Cargo.toml
+++ b/gws/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cherenkov"
+name = "gws"
 version = "0.1.0"
 authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
 edition = "2018"
