--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cherenkov_native"
+name = "gws_native"
 version = "0.1.0"
 authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
 edition = "2018"
@@ -7,4 +7,4 @@ edition = "2018"
 [dependencies]
 simon = "0.2"
 whoami = "0.4"
-cherenkov_prototty = { path = "../prototty" }
+gws_prototty = { path = "../prototty" }
