--- a/prototty/Cargo.toml
+++ b/prototty/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cherenkov_prototty"
+name = "gws_prototty"
 version = "0.1.0"
 authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
 edition = "2018"
@@ -9,7 +9,7 @@ wasm-bindgen = ["rand/wasm-bindgen"]
 
 [dependencies]
 serde = { version = "1.0", features = ["serde_derive"] }
-cherenkov = { path = "../cherenkov" }
+gws = { path = "../gws" }
 prototty = { version = "0.25", features = ["serialize", "storage"] }
 rand = { version = "0.6" }
 rand_isaac = { version = "0.1", features = ["serde1"] }
