--- a/unix/Cargo.toml
+++ b/unix/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "cherenkov_unix"
+name = "gws_unix"
 version = "0.1.0"
 authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 prototty_unix = { version = "0.25", features = ["storage"] }
-cherenkov_prototty = { path = "../prototty" }
-cherenkov_native = { path = "../native" }
+gws_prototty = { path = "../prototty" }
+gws_native = { path = "../native" }
