--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ matrix:
     - sudo apt-get -y install python3 python3-pip
     - pip3 install --quiet --user sh toml
     script:
-    - scripts/build-wasm.sh gws
+    - scripts/build-wasm.sh get-well-soon
     deploy:
       - provider: s3
         skip_cleanup: true
