Progress on terrain generation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ members = [
     "glutin",
     "unix",
     "wasm",
+    "image-to-text",
 ]
 
-[profile.release]
-lto = true
+#[profile.release]
+#lto = true
