--- a/gws/Cargo.toml
+++ b/gws/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 rand = "0.6"
 wfc = "0.8"
+line_2d = "0.1"
 serde = { version = "1.0", features = ["serde_derive"] }
 grid_2d = { version = "0.12", features = ["serialize"] }
 coord_2d = { version = "0.2", features = ["serialize"] }
