--- a/prototty/Cargo.toml
+++ b/prototty/Cargo.toml
@@ -14,3 +14,4 @@ prototty = { version = "0.25", features = ["serialize", "storage"] }
 rand = { version = "0.6" }
 rand_isaac = { version = "0.1", features = ["serde1"] }
 direction = "0.17"
+grid_2d = "0.12"
