--- a/prototty/Cargo.toml
+++ b/prototty/Cargo.toml
@@ -10,7 +10,7 @@ wasm-bindgen = ["rand/wasm-bindgen"]
 [dependencies]
 serde = { version = "1.0", features = ["serde_derive"] }
 gws = { path = "../gws" }
-prototty = { version = "0.27", features = ["serialize", "storage"] }
+prototty = { git = "https://github.com/stevebob/prototty", branch = "0.27-fix-windows-graphics-error", features = ["serialize", "storage"] }
 rand = { version = "0.6" }
 rand_isaac = { version = "0.1", features = ["serde1"] }
 direction = "0.17"
